--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
     "test": "test"
   },
   "dependencies": {
-    "@ethersproject/experimental": "^5.5.0",
-    "@uniswap/v3-periphery": "^1.2.0",
-    "node-schedule": "^2.1.0",
-    "retry": "^0.13.1"
   },
   "devDependencies": {
+    "@ethersproject/experimental": "^5.5.0",
     "@rari-capital/solmate": "^6.2.0",
     "@defi-wonderland/smock": "^2.0.7",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers",
@@ -45,7 +42,8 @@
     "ts-mocha": "^8.0.0",
     "ts-node": "^10.2.1",
     "typechain": "^5.1.2",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "retry": "^0.13.1"
   },
   "scripts": {
     "cron:rebase:testnet": "hardhat run scripts/cron/rebase.js --network testnet",
